--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     
     <body>
-       <img src = "https://codehs.com/uploads/ebd62d8f010a78893fecb7a78ca3e657" alt = "a cool seal.">
+       <!-- <img src = "https://codehs.com/uploads/ebd62d8f010a78893fecb7a78ca3e657" alt = "a cool seal."> 
        <br>
         <iframe 
             width="631" 
@@ -18,7 +18,7 @@
             title="How A Seal Moves On Land" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             referrerpolicy="strict-origin-when-cross-origin" 
-            allowfullscreen></iframe>
+            allowfullscreen></iframe> -->
         <button id="SealButton">🦭</button>
         <script src="main.js"></script>
     </body>
