--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <h1> I love seals. </h1>
+        <h1> I love seals.     </h1>
+        <h1 id = "currentseals"> btw you have 1 seals </h1>
         <hr>
         <title>🦭🦭🦭🦭🦭Seal.</title>
         <link href="style.css" rel="stylesheet">
-        <link rel = "icon" href = "https://codehs.com/uploads/70921f0703fd0ef9475b9ba40b1c7c6c">
+        <!--<link rel = "icon" href = "https://codehs.com/uploads/70921f0703fd0ef9475b9ba40b1c7c6c"> -->
     </head>
     
     <body>
-       <!-- <img src = "https://codehs.com/uploads/ebd62d8f010a78893fecb7a78ca3e657" alt = "a cool seal."> 
+       <!--<img src = "https://codehs.com/uploads/ebd62d8f010a78893fecb7a78ca3e657" alt = "a cool seal.">
        <br>
         <iframe 
             width="631" 
@@ -18,8 +19,12 @@
             title="How A Seal Moves On Land" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             referrerpolicy="strict-origin-when-cross-origin" 
-            allowfullscreen></iframe> -->
+            allowfullscreen></iframe>-->
+            <button id="SAVE">SAVE</button>
         <button id="SealButton">🦭</button>
+        <hr id="UpgradeHR">
+        <button id = "U1" class="U" >Buy another seal</button>
+        <p>I'll add them later feeling lazy rn</p>
         <script src="main.js"></script>
     </body>
 </html>
